# conversational_insight_generation_with_ui

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .env.example  README_VALIDATION.md  arima_model_selector.py  chart_selector.py  db.py  env_config_example.txt  feedback_loop.py  insight_generator.py  llm_sql.py  main.py  query_validator.py  requirements.txt  test_validation.py
data/: app.db
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  test.html
frontend/src/: index.css
frontend/src/components/: ChartRenderer.tsx  ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
frontend/src/pages/: Index.tsx  sql-chat.css  sql-chat.tsx
repo-backup.git/: config
