[project]
name = "nl2sql-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "langchain==0.2.6",
    "langchain-core==0.2.10",
    "langchain-groq==0.1.4",
    "prettytable>=3.16.0",
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.30.1",
]
