[project]
name = "conversational-insight-generation-with-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "langchain==0.2.6",
    "langchain-core==0.2.10",
    "langchain-groq==0.1.4",
    "matplotlib>=3.10.6",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "pmdarima>=2.0.4",
    "prettytable>=3.16.0",
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "statsmodels>=0.14.5",
    "uvicorn[standard]==0.30.1",
]
